# libcomn

./: CMakeLists.txt  README.md
3rdlibs/: event_core.lib  event_extra.lib
exe/: main.cpp
inc/: comn.h  utils.h
inc/libeventInc/event2/: event-config.h
src/: utils.cpp
